--- a/source/_posts/19013101.md
+++ b/source/_posts/19013101.md
@@ -9,7 +9,7 @@ categories: 其他
 
 <!--more-->
 
-逻辑上我们应该在搭建博客之初的第一步创建一个`source`仓库，然后 clone 到本地，然后，在这个所 clone 的文件夹下搭建博客。其中 clone 的操作命令如下：
+逻辑上我们应该在搭建博客之初的第一步创建一个空的`source`仓库，然后 clone 到本地，然后，在这个所 clone 的文件夹下搭建博客。其中 clone 的操作命令如下：
 
 ```
 git clone https://github.com/username/仓库名.git  
@@ -19,10 +19,38 @@ git clone https://github.com/username/仓库名.git
 下面记录下 git 的用法。
 
 ## 如何上传
-至于如何上传，主要参考的这篇博文——[使用git将项目上传到github（最简单方法）](https://www.cnblogs.com/cxk1995/p/5800196.html)。主要的步骤是：
-1. git add . (`.` 代表添加当前文件夹下面的所有文件)
-2. git commit - m "备注信息"
-3. git push -u origin master (push 到 github 的仓库中，可能需要填写账号密码等信息)
+至于如何上传，主要参考的这篇博文——[使用git将项目上传到github（最简单方法）](https://www.cnblogs.com/cxk1995/p/5800196.html)，还有这篇[博文](https://www.cnblogs.com/alex-415/p/6912294.html)。主要的步骤是：
+```
+1. git init //初始化仓库
+2. git add .(文件name) //添加文件到本地仓库
+3. git commit -m "first commit" //添加文件描述信息
+4. git remote add origin + 远程仓库地址 //链接远程仓库，创建主分支 
+5. git push -u origin master //把本地仓库的文件推送到远程仓库
+```
+有可能出现错误：
+```
+hint: Updates were rejected because the remote contains work that you do
+hint: not have locally. This is usually caused by another repository pushing
+hint: to the same ref. You may want to first integrate the remote changes
+hint: (e.g., 'git pull ...') before pushing again.
+hint: See the 'Note about fast-forwards' in 'git push --help' for details.
+```
+根据提示在步骤 4 和 5 之间添加一行：
+```
+1. git init //初始化仓库
+2. git add .(文件name) //添加文件到本地仓库
+3. git commit -m "first commit" //添加文件描述信息
+4. git remote add origin + 远程仓库地址 //链接远程仓库，创建主分支；
+// 若失败，git remote rm origin 后重复。
+5. git pull origin master // 把本地仓库的变化连接到远程仓库主分支
+6. git push -u origin master //把本地仓库的文件推送到远程仓库
+```
+如果远程分支我们不需要了，我们可以运用[命令强制覆盖掉](https://blog.csdn.net/lplife/article/details/79818097)：
+
+```
+ git push origin master -f
+ ```
+
 
 ## .gitignore 的写法
 
@@ -54,7 +82,7 @@ doc/*.txt # 会忽略 doc/notes.txt 但不包括 doc/server/arch.txt
 
 ## 另外
 
-若果在`git add .`之前需要`git init`，然后链接远程仓库`git remote add origin xxx.git`，由于不熟悉可能反复操作链接不上了，会出现如下的错误信息：
+如果链接远程仓库`git remote add origin xxx.git`时出现如下的错误信息：
 ```
 fatal: remote origin already exists.
 ```
