--- a/source/_posts/19013101.md
+++ b/source/_posts/19013101.md
@@ -19,6 +19,9 @@ git clone https://github.com/username/仓库名.git
 下面记录下 git 的用法。
 
 ## 如何上传
+
+若 git 版本太低，链接不上远程时，需要先更新下 git。
+
 至于如何上传，主要参考的这篇博文——[使用git将项目上传到github（最简单方法）](https://www.cnblogs.com/cxk1995/p/5800196.html)，还有这篇[博文](https://www.cnblogs.com/alex-415/p/6912294.html)。主要的步骤是：
 ```
 1. git init //初始化仓库
