--- a/source/_posts/19013101.md
+++ b/source/_posts/19013101.md
@@ -98,6 +98,9 @@ fatal: remote origin already exists.
 ```
 然后再使用之前的命令应该就可以链接上去了。
 
+其实这个链接已经存在，不再链接应该也是可以的，直接 push 就行了。
+</br>
+
 博客从头到尾的搭建可以参考这篇非常详细的[博文](https://blog.csdn.net/u010820857/article/details/81880568)。
 
 
