--- a/source/_posts/19013101.md
+++ b/source/_posts/19013101.md
@@ -27,7 +27,8 @@ git clone https://github.com/username/仓库名.git
 1. git init //初始化仓库
 2. git add .(文件name) //添加文件到本地仓库
 3. git commit -m "first commit" //添加文件描述信息
-4. git remote add origin + 远程仓库地址 //链接远程仓库，创建主分支 
+4. git remote add origin + 远程仓库地址 //链接远程仓库，创建主分支；
+                                       // 若失败，git remote rm origin 后重复。
 5. git push -u origin master //把本地仓库的文件推送到远程仓库
 ```
 有可能出现错误：
@@ -44,7 +45,6 @@ hint: See the 'Note about fast-forwards' in 'git push --help' for details.
 2. git add .(文件name) //添加文件到本地仓库
 3. git commit -m "first commit" //添加文件描述信息
 4. git remote add origin + 远程仓库地址 //链接远程仓库，创建主分支；
-// 若失败，git remote rm origin 后重复。
 5. git pull origin master // 把本地仓库的变化连接到远程仓库主分支
 6. git push -u origin master //把本地仓库的文件推送到远程仓库
 ```
