--- a/source/_posts/19020801.md
+++ b/source/_posts/19020801.md
@@ -1,8 +1,8 @@
 ---
 title: 过完年再次回到深圳
 date: 2019-02-08 22:34:12
-tags: 其他
-categories: 随感
+tags: 随感
+categories: 其他
 ---
 
 短暂的在家过完了年，今天回到了深圳继续漂泊，大年初四也是挺早的。有很多的感慨，也都放在心里吧，不能多说。
@@ -13,9 +13,9 @@ categories: 随感
 
 ## 。
 
-今天和姐姐一起走,离开家里的时候，跟爷爷道别时，爷爷和我说：“你也走了？我还以为你会在家再玩几天呢~ 在外面那个一些(意思是，要努力奋斗，要有所成就吧)。忽然想到这一次道别有可能是我和爷爷的最后一次道别，眼泪忽然就要留下来。因为爷爷今年得了重病，肿瘤。我不禁差点留下眼泪，强忍住了，怕被人看见。
+今天和姐姐一起走,离开家里的时候，跟爷爷道别时，爷爷和我说：“你也走了？我还以为你会在家再玩几天呢~ 在外面那个一些(意思是，要努力奋斗，要有所成就吧)。忽然想到这一次道别有可能是我和爷爷的最后一次道别，眼泪忽然就要流下来。因为爷爷今年得了重病，肿瘤。我不禁差点留下眼泪，强忍住了，怕被人看见。
 
-2017 年奶奶离世了。眼看着陪自己从小到大的老人们都离我而去，内心有太多的无能为力。我真希望爷爷将在某一次的睡梦中安然离世，没有痛苦的那种。
+2017 年奶奶离世了。眼看着陪自己从小到大的老人们都要离我而去，内心有太多的无能为力。我真希望爷爷会在某一次的睡梦中安然离世，没有痛苦的那种。
 
 我一定要挣到钱，一定要成功。
 
@@ -32,5 +32,6 @@ categories: 随感
 <font  color="gray"><center><small>▲ 20150221_173817 - 奶奶</small></center></font>
 -->
 ---
+
 
 暗下决心，要努力，让一切变得更好。
