--- a/source/_posts/190212-01.md
+++ b/source/_posts/190212-01.md
@@ -43,7 +43,7 @@ am file
 
 1. 使用百度 BDUSS 来登录百度帐号: `login -bduss=<BDUSS>`。   // 去浏览器中找到百度的 cookie，**BDUSS**。
 
-    ![image](http://wx4.sinaimg.cn/large/006mcMYXgy1g03mn57y0aj30yi0baaas.jpg)
+    ![image](https://wx4.sinaimg.cn/large/006mcMYXgy1g03mn57y0aj30yi0baaas.jpg)
 
 2. `h`，查看帮助。
 
