--- a/source/_posts/190211-01.md
+++ b/source/_posts/190211-01.md
@@ -16,11 +16,11 @@ vscode 中用 MinGW 编译，修改`Code Runner`对编译的设置。
 
 
 1. 在设置中搜索`code-runner.executorMap`。
-![image](http://ws3.sinaimg.cn/large/006mcMYXgy1g02gem98e0j30n307nt91.jpg)
+![image](https://ws3.sinaimg.cn/large/006mcMYXgy1g02gem98e0j30n307nt91.jpg)
 2. 点击`在setting.json中编辑`。
 3. 点击选项前面的齿轮 -> 复制为 JSON 文本 -> 粘贴到第 2 步中 -> 将参数添加到命令行中 -> 保存。
-![image](http://wx4.sinaimg.cn/large/006mcMYXgy1g02gh6pqq4j30md06odg2.jpg)
-![image](http://ws2.sinaimg.cn/large/006mcMYXgy1g02gizvu7tj30ti0jdjtq.jpg)
+![image](https://wx4.sinaimg.cn/large/006mcMYXgy1g02gh6pqq4j30md06odg2.jpg)
+![image](https://ws2.sinaimg.cn/large/006mcMYXgy1g02gizvu7tj30ti0jdjtq.jpg)
 
 ---
 <font size=2 color="gray">
