--- a/source/_posts/190217-01.md
+++ b/source/_posts/190217-01.md
@@ -1,7 +1,7 @@
 ---
 title: UG NX 变螺距螺旋线
 date: 2019-02-17 21:27:43
-tags: 造型
+tags: [造型, UG_NX]
 categories: 机械结构
 ---
 
@@ -11,7 +11,7 @@ categories: 机械结构
 
 如图，螺旋线圈数为 5，半径为 50，每一圈的节距分别为，10、20、30、40、50，总长为 150。
 
-1. Z 向画一根`脊线`，长度为 150。
+1. Z 向草图画一根`脊线`，直线长度为 150。
 
 ![image](https://wx1.sinaimg.cn/large/006mcMYXgy1g09r2ogm2xj30960iy0sr.jpg)
 
